--- a/index.html
+++ b/index.html
@@ -12,119 +12,13 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
-    <!-- Favicons -->
+{% load static %}
+    <link rel="stylesheet" href='{% static "blog/cssfiles/index.css" %}'>
+</head>
+ 
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-
-body {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    color: #5a5a5a;
-  }
-
-  
-  /* CUSTOMIZE THE CAROUSEL
-  -------------------------------------------------- */
-  
-  /* Carousel base class */
-  .carousel {
-    margin-bottom: 4rem;
-  }
-  /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
-    bottom: 3rem;
-    z-index: 10;
-  }
-  
-  /* Declare heights because of positioning of img element */
-  .carousel-item {
-    height: 32rem;
-  }
-  .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem;
-  }
-  
-  
-  /* MARKETING CONTENT
-  -------------------------------------------------- */
-  
-  /* Center align the text within the three columns below the carousel */
-  .marketing .col-lg-4 {
-    margin-bottom: 1.5rem;
-    text-align: center;
-  }
-  .marketing h2 {
-    font-weight: 400;
-  }
-  .marketing .col-lg-4 p {
-    margin-right: .75rem;
-    margin-left: .75rem;
-  }
-  
-  
-  /* Featurettes
-  ------------------------- */
-  
-  .featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-  }
-  
-  /* Thin out the marketing headings */
-  .featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    letter-spacing: -.05rem;
-  }
-  
-  
-  /* RESPONSIVE CSS
-  -------------------------------------------------- */
-  
-  @media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
-    }
-  
-    .featurette-heading {
-      font-size: 50px;
-    }
-  }
-  
-  @media (min-width: 62em) {
-    .featurette-heading {
-      margin-top: 7rem;
-    }
-  }
-
-
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link  rel="stylesheet" type="text/css" href="cssfiles/carousel.css" >
-  </head>
-  <body> 
    
-    <header>
+  <header>
 
    <!-- Start Of Navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -138,18 +32,111 @@ body {
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Blogs <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="home">Blogs <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+
+      <!-- Modal Signin button-->
+      <div class="Signin"> 
+        <button class="btn btn-success" type="button" data-backdrop="static" data-toggle="modal"   data-target="#loginModal" aria-controls="navbarCollapse" aria-label="Toggle navigation" >
+          Sign In
+        </button>
     </div>
 
-  </nav>
-   <!-- End of Navbar -->
+    <!-- Button trigger modal -->
+    <div class="Signup"> 
+      <button class="btn btn-success mx-1" type="button" data-toggle="modal"  data-target="#signupModal" aria-controls="navbarCollapse" aria-label="Toggle navigation" aria-hidden="true">
+          SignUp
+      </button>
+    </div>
+
+     <!-- Modal Signin -->
+     <div class="modal" id="loginModal" tabindex="-1" role="dialog"  aria-labelledby="">
+      <div class="modal-dialog" role="document">
+        <form class="modal-content">
+          <div class="modal-header">
+                 <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+            <div class="modal-body">
+              <p>Modal body text goes here.</p>
+              <form method="POST" action="login">
+                <div class="form-group">
+                  <label for="uname">User Name</label>
+                  <input type="text" class="form-control" id="uname"required>
+                </div>
+      
+                <div class="form-group">
+                  <label for= "passwd"> Password </label>
+                  <input type="password" class="form-control" id="passwd" required>
+                </div>
+
+                <div class="modal-footer">
+                  <button type="submit" class="btn btn-primary"> Submit </button>
+                </div>
+              </form>
+            </div>
+      </div>
+    </div>
+
+<!-- ------------------------------------------------------------------------------->
+
+<!-- Modal Signup -->
+<div class="modal" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="" >
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="signupModal">Enter your details</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="false">&times;</span>
+        </button>
+      </div>
+
+      <div class="modal-body">
+        <form method="POST" action="signup">
+          <!--Sign up elements-->
+            <div class="form-group">
+                <label for="fname">First Name</label>
+                <input type="text" class="form-control" id="fname" >
+            </div>
+
+          <div class="form-group">
+              <label for="lname">Last Name</label>
+              <input type="text" class="form-control" id="lname" required>
+          </div>
+
+          <div class="form-group">
+            <label for="username">User Name</label>
+            <input type="text" class="form-control" id="username" required>
+          </div>
+
+          <div class="form-group">
+            <label for= "password1"> Password </label>
+            <input type="password" class="form-control" id="password1" required >
+          </div>
+
+          <div class="form-group">
+            <label for="password2"> Re-enter Password </label>
+            <input type="password" class="form-control" id="password2" required>
+          </div>
+
+          {% csrf_token %}
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ------------------------------------------------------------------------------->
+</nav>
 </header>
+<body> 
 
 <main role="main">
 
@@ -267,7 +254,7 @@ body {
     </div>
 
     <hr class="featurette-divider">
-
+    '{% static "blog/images/scb.JPG" %}'
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
@@ -309,6 +296,7 @@ body {
       <p> Home Page@2020</p>
   </footer>
 </main>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
